feat: added facility API and build workflow
